ops/k8s/k8-bsbe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-store-be-dep
  namespace: dev
spec:
  selector:
    matchLabels:
      app: book-store-be
  replicas: 1
  template:
    metadata:
      labels:
        app: book-store-be
    spec:
      containers:
      - name: book-store-be
        image: dineshbehera/book-store-be:1.0
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1024m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: book-store-be-svc
  namespace: dev
spec:
  selector:
    app: book-store-be
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 32000
