ops/k8s/k8-bsfe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-store-fe-dep
  namespace: dev
spec:
  selector:
    matchLabels:
      app: book-store-fe
  replicas: 1
  template:
    metadata:
      labels:
        app : book-store-fe  
    spec:
      containers:
        - name: book-store-fe
          image: dineshbehera/book-store-fe:1.0
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1024m"
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: book-store-fe-svc
  namespace: dev
spec:
  selector:
    app: book-store-fe
  type: NodePort
  ports:
  - protocol: TCP
    port: 80        # The port that the service is running on in the cluster
    targetPort: 80  # The port exposed by the service
    nodePort: 31000
